--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "authright-online-meal-ordering-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8070",
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
