--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     }
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-bootstrap": "^1.0.0-beta.14"
+  }
 }
