--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:8070",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
